--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <img src="images/claracarpentier-removebg.png" alt="Logo Clara Carp" >
-            <div>
+            <div class="menu-categories">
                 <a href="mediation.html"> <img src="images/mediation-removebg.png" alt="bouton mediation" ></a>
                 <a href="design_graphique.html"> <img src="images/design_graphique-removebg.png" alt="bouton design graphique" ></a>
                 <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne-removebg.png" alt="bouton artiste plasticienne"></a>
