Description rapide des changements

--- a/index.html
+++ b/index.html
@@ -12,47 +12,49 @@
 </head>
 
 <body>
-    <header>
-        <nav>
+    <section class="page_accueil">
+        <header>
+            <nav>
+                <img src="images/claracarpentier-removebg.png" alt="Logo Clara Carp" >
+                <div class="menu-categories">
+                    <a href="mediation.html"> <img src="images/mediation-removebg.png" alt="bouton mediation" ></a>
+                    <a href="design_graphique.html"> <img src="images/design_graphique-removebg.png" alt="bouton design graphique" ></a>
+                    <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne-removebg.png" alt="bouton artiste plasticienne"></a>
+                    <a href="a-propos.html"> <img src="images/about_clara-removebg.png" alt="bouton about" ></a>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <section class="accueil-introduction">
+                <img src="images/portrait_dessin-removebg.png" alt="Portrait dessin de Clara" >
+            </section>
+
+            <section class="accueil-photos">
+                <h2>Mes derniers projets</h2>
+                <div>
+                    <a href="mediation.html"> <img src="images/visite_pba.png" title="Médiation" alt="C'est une photo de Clara qui présente un tableau" > </a>
+                    <a href="design_graphique.html"> <img src="images/logo_amiens.png" title="Design Graphique" alt="Quelqu'un tient une affiche avec des logos pour la cathédrale d'Amiens'" > </a>
+                    <a href="artiste_plasticienne.html"> <img src="images/perroquet_casque.png" title="Artiste Plasticienne" alt="Sculpture en acier créée par Clara" > </a>
+                    <a href="a-propos.html"> <img src="images/atelier_enfants.png" title="A Propos" alt="Atelier avec des enfants à la villa Cavrois" > </a>
+                </div>
+
+            </section>
+        </main>
+        <footer>
             <img src="images/claracarpentier-removebg.png" alt="Logo Clara Carp" >
-            <div class="menu-categories">
-                <a href="mediation.html"> <img src="images/mediation-removebg.png" alt="bouton mediation" ></a>
-                <a href="design_graphique.html"> <img src="images/design_graphique-removebg.png" alt="bouton design graphique" ></a>
-                <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne-removebg.png" alt="bouton artiste plasticienne"></a>
-                <a href="a-propos.html"> <img src="images/about_clara-removebg.png" alt="bouton about" ></a>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <section class="accueil-introduction">
-            <img src="images/portrait_dessin-removebg.png" alt="Portrait dessin de Clara" >
-        </section>
-
-        <section class="accueil-photos">
-            <h2>Mes derniers projets</h2>
             <div>
-                <a href="mediation.html"> <img src="images/visite_pba.png" title="Médiation" alt="C'est une photo de Clara qui présente un tableau" > </a>
-                <a href="design_graphique.html"> <img src="images/logo_amiens.png" title="Design Graphique" alt="Quelqu'un tient une affiche avec des logos pour la cathédrale d'Amiens'" > </a>
-                <a href="artiste_plasticienne.html"> <img src="images/perroquet_casque.png" title="Artiste Plasticienne" alt="Sculpture en acier créée par Clara" > </a>
-                <a href="a-propos.html"> <img src="images/atelier_enfants.png" title="A Propos" alt="Atelier avec des enfants à la villa Cavrois" > </a>
+                <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="lien-icone">
+                    <img src="images/mail_clara-removebg.png" title="Écrivez-moi" alt="Logo Mail Arty" >
+                </a>
+                <a target="_blank" href="https://www.instagram.com/clara__carpentier?igsh=MXNpcG5rNzRiazBreg%3D%3D&utm_source=qr" class="lien-icone">
+                    <img src="images/instagram_clara-removebg.png" title="Mon Instagram" alt="Logo Instagram" >
+                </a>
+                <a target="_blank" href="https://www.linkedin.com/in/clara-carpentier-553555207/" class="lien-icone">
+                    <img src="images/logo_linkedin-removebg.png" title="Mon LinkedIn" alt="Logo LinkedIn" >
+                </a>
             </div>
-
-        </section>
-    </main>
-    <footer>
-        <img src="images/claracarpentier-removebg.png" alt="Logo Clara Carp" >
-        <div>
-            <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="lien-icone">
-                <img src="images/mail_clara-removebg.png" title="Écrivez-moi" alt="Logo Mail Arty" >
-            </a>
-            <a target="_blank" href="https://www.instagram.com/clara__carpentier?igsh=MXNpcG5rNzRiazBreg%3D%3D&utm_source=qr" class="lien-icone">
-                <img src="images/instagram_clara-removebg.png" title="Mon Instagram" alt="Logo Instagram" >
-            </a>
-            <a target="_blank" href="https://www.linkedin.com/in/clara-carpentier-553555207/" class="lien-icone">
-                <img src="images/logo_linkedin-removebg.png" title="Mon LinkedIn" alt="Logo LinkedIn" >
-            </a>
-        </div>
-    </footer>
+        </footer>
+    </section>
 </body>
 
 </html>
