--- a/a-propos.html
+++ b/a-propos.html
@@ -11,11 +11,11 @@
     <link rel="icon" href="images/faviconCC-removebg.png" type="image/png">
 </head>
 
-<body>
+<body class="page-about">
     <header>
         <nav>
             <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
-            <div>
+            <div class="menu-categories">
                 <a href="mediation.html"> <img src="images/mediation-removebg.png" alt="bouton mediation" ></a>
                 <a href="design_graphique.html"> <img src="images/design_graphique-removebg.png" alt="bouton design graphique" ></a>
                 <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne-removebg.png" alt="bouton artiste plasticienne"></a>
@@ -24,22 +24,22 @@
         </nav>
     </header>
 
-         <section class="contenu_pages_annexes">
-            <main>
-            <h1>À propos</h1>
-            <div class="carre-contenu">
-                <p>
-                    Clara Carpentier est artiste pluridisciplinaire et médiatrice culturelle basée à Lille, diplômée d’un double Master en exposition et production des œuvres d’art contemporain (Université de Lille et École supérieure d’art du Nord-Pas-de-Calais, 2021). Elle articule sa pratique artistique — sculpture, vidéo, son, performance — avec l’animation d’ateliers et la transmission dans des institutions comme le Palais des Beaux-Arts de Lille et la Villa Cavrois à Croix. Son parcours allie conception et gestion de programmes éducatifs, collaborations culturelles et accompagnement de publics variés, en s’appuyant sur ses propres recherches et expériences de terrain.
-                </p>
+    
+    <main>
+        <h1>À propos</h1>
+        <div class="carre-contenu">
+            <p>
+                Clara Carpentier est artiste pluridisciplinaire et médiatrice culturelle basée à Lille, diplômée d’un double Master en exposition et production des œuvres d’art contemporain (Université de Lille et École supérieure d’art du Nord-Pas-de-Calais, 2021). Elle articule sa pratique artistique — sculpture, vidéo, son, performance — avec l’animation d’ateliers et la transmission dans des institutions comme le Palais des Beaux-Arts de Lille et la Villa Cavrois à Croix. Son parcours allie conception et gestion de programmes éducatifs, collaborations culturelles et accompagnement de publics variés, en s’appuyant sur ses propres recherches et expériences de terrain.
+            </p>
 
-                <img src="images a-propos/portrait_about.png" alt="photo du livret tempo pour la villa cavrois" >
-            </div>
-            </br>
-            <div class=mail-contact>
-                <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="cta">UN PROJET ? ÉCRIVEZ-MOI</a>
-            </div>
-          </main>
-         </section>
+            <img src="images a-propos/portrait_about.png" alt="photo du livret tempo pour la villa cavrois" >
+        </div>
+        </br>
+        <div class=mail-contact>
+            <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="cta">UN PROJET ? ÉCRIVEZ-MOI</a>
+        </div>
+    </main>
+ 
 
     <footer>
         <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
