--- a/artiste_plasticienne.html
+++ b/artiste_plasticienne.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
-            <div>
+            <div class="menu-categories">
                 <a href="mediation.html"> <img src="images/mediation-removebg.png" alt="bouton mediation" ></a>
                 <a href="design_graphique.html"> <img src="images/design_graphique-removebg.png" alt="bouton design graphique" ></a>
                 <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne_souligne.png" alt="bouton artiste plasticienne"></a>
@@ -24,7 +24,6 @@
         </nav>
     </header>
 
-    <section class="contenu_pages_annexes">
     <main>
         <h1>Workshop : Concerto Festivo</h1>
         <section class="rangee_photos">
@@ -88,7 +87,6 @@
         </section>
     
     </main>
-    </section>
 
     <footer>
         <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
