--- a/mediation.html
+++ b/mediation.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
-            <div>
+            <div class="menu-categories">
                 <a href="mediation.html"> <img src="images/mediation_souligne.png" alt="bouton mediation" ></a>
                 <a href="design_graphique.html"> <img src="images/design_graphique-removebg.png" alt="bouton design graphique" ></a>
                 <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne-removebg.png" alt="bouton artiste plasticienne"></a>
@@ -25,7 +25,6 @@
         </nav>
     </header>
 
-    <section class="contenu_pages_annexes">
     <main>
         <h1>Visites guidées</h1>
         <section class="rangee_photos">
@@ -96,7 +95,6 @@
         </section>
 
     </main>
-    </section>
 
     <footer>
         <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
