Description rapide des changements

--- a/a-propos.html
+++ b/a-propos.html
@@ -33,7 +33,7 @@
                 Clara Carpentier est artiste pluridisciplinaire et médiatrice culturelle basée à Lille, diplômée d’un double Master en exposition et production des œuvres d’art contemporain (Université de Lille et École supérieure d’art du Nord-Pas-de-Calais, 2021). Elle articule sa pratique artistique — sculpture, vidéo, son, performance — avec l’animation d’ateliers et la transmission dans des institutions comme le Palais des Beaux-Arts de Lille et la Villa Cavrois à Croix. Son parcours allie conception et gestion de programmes éducatifs, collaborations culturelles et accompagnement de publics variés, en s’appuyant sur ses propres recherches et expériences de terrain.
             </p>
 
-            <img src="images a-propos/portrait_about.png" alt="photo du livret tempo pour la villa cavrois" >
+            <img src="images a-propos/portrait_about.png" alt="photo de clara carpentier" >
         </div>
         </br>
         <div class=mail-contact>
