--- a/design_graphique.html
+++ b/design_graphique.html
@@ -29,28 +29,28 @@
         <h1>Livret TEMPO / Villa Cavrois</h1>
         <section class="rangee_photos">
             <div>
-                <img src="images design graphique/livret_tempo1.png" alt="photo du livret tempo pour la villa cavrois" >
-                <img src="images design graphique/livret_tempo2.png" alt="photo du livret tempo pour la villa cavrois" >
+                <img src="images_design_graphique/livret_tempo1.png" alt="photo du livret tempo pour la villa cavrois" >
+                <img src="images_design_graphique/livret_tempo2.png" alt="photo du livret tempo pour la villa cavrois" >
             </div>
         </section>
 
         <h1>Jeu de piste : Cathédrale d'Amiens</h1>
         <section class="rangee_photos">
             <div>
-                <img src="images design graphique/jeu_de _piste_amiens.png" alt="photo du design jeu de piste pour la cathédral d'Amiens" >
+                <img src="images_design_graphique/jeu_de _piste_amiens.png" alt="photo du design jeu de piste pour la cathédral d'Amiens" >
             </div>
         </section>
 
         <h1>Jeu de cartes 7 familles Villa Cavrois</h1>
         <section class="rangee_photos">
             <div>
-                <img src="images design graphique/7F1.png" alt="symbole des 7 familles" >
-                <img src="images design graphique/7F2.png" alt="symbole des 7 familles" >
-                <img src="images design graphique/7F3.png" alt="symbole des 7 familles" >
-                <img src="images design graphique/7F4.png" alt="symbole des 7 familles" >
-                <img src="images design graphique/7F5.png" alt="symbole des 7 familles" >
-                <img src="images design graphique/7F6.png" alt="symbole des 7 familles" >
-                <img src="images design graphique/7F7.png" alt="symbole des 7 familles" >
+                <img src="images_design_graphique/7F1.png" alt="symbole des 7 familles" >
+                <img src="images_design_graphique/7F2.png" alt="symbole des 7 familles" >
+                <img src="images_design_graphique/7F3.png" alt="symbole des 7 familles" >
+                <img src="images_design_graphique/7F4.png" alt="symbole des 7 familles" >
+                <img src="images_design_graphique/7F5.png" alt="symbole des 7 familles" >
+                <img src="images_design_graphique/7F6.png" alt="symbole des 7 familles" >
+                <img src="images_design_graphique/7F7.png" alt="symbole des 7 familles" >
         </section>
     
     </main>
