--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <section class="page_accueil">
         <header>
             <nav>
-                <img src="images/claracarpentier-removebg.png" alt="Logo Clara Carp" >
+                <img src="images/clara_carpentier_logo.png" alt="Logo Clara Carp" >
                 <div class="menu-categories">
-                    <a href="mediation.html"> <img src="images/mediation-removebg.png" alt="bouton mediation" ></a>
-                    <a href="design_graphique.html"> <img src="images/design_graphique-removebg.png" alt="bouton design graphique" ></a>
-                    <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne-removebg.png" alt="bouton artiste plasticienne"></a>
-                    <a href="a-propos.html"> <img src="images/about_clara-removebg.png" alt="bouton about" ></a>
+                    <a href="mediation.html"> <img src="images/mediation.png" alt="bouton mediation" ></a>
+                    <a href="design_graphique.html"> <img src="images/design_graphique.png" alt="bouton design graphique" ></a>
+                    <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne.png" alt="bouton artiste plasticienne"></a>
+                    <a href="a-propos.html"> <img src="images/about.png" alt="bouton about" ></a>
                 </div>
             </nav>
         </header>
@@ -42,7 +42,7 @@
             </section>
         </main>
         <footer>
-            <img src="images/claracarpentier-removebg.png" alt="Logo Clara Carp" >
+            <img src="images/clara_carpentier_logo.png" alt="Logo Clara Carp" >
             <div>
                 <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="lien-icone">
                     <img src="images/mail_clara-removebg.png" title="Écrivez-moi" alt="Logo Mail Arty" >
