--- a/artiste_plasticienne.html
+++ b/artiste_plasticienne.html
@@ -17,16 +17,16 @@
         <nav>
             <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
             <div class="menu-categories">
-                <a href="mediation.html"> <img src="images/mediation-removebg.png" alt="bouton mediation" ></a>
-                <a href="design_graphique.html"> <img src="images/design_graphique-removebg.png" alt="bouton design graphique" ></a>
-                <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne_souligne.png" alt="bouton artiste plasticienne"></a>
-                <a href="a-propos.html"> <img src="images/about_clara-removebg.png" alt="bouton about" ></a>
+                 <a href="mediation.html"> <img src="images/mediation.png" alt="bouton mediation" ></a>
+                 <a href="design_graphique.html"> <img src="images/design_graphique.png" alt="bouton design graphique" ></a>
+                 <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne.png" alt="bouton artiste plasticienne"></a>
+                 <a href="a-propos.html"> <img src="images/about.png" alt="bouton about" ></a>
             </div>
         </nav>
     </header>
 
     <main>
-        <h1>Workshop : Concerto Festivo</h1>
+        <h1>Workshop :<br> Concerto Festivo</h1>
         <section class="rangee_photos">
             <div>
                 <img src="images artiste plasticienne/concerto_festivo_workshop1.png" alt="photo de l'atelier concerto festivo" >
@@ -37,7 +37,7 @@
             </div>
         </section>
 
-        <h1>Cappelli : FRAC Grand Large</h1>
+        <h1>Cappelli :<br> FRAC Grand Large</h1>
 
         <section class="rangee_photos">
             <div>
@@ -90,7 +90,7 @@
     </main>
 
     <footer>
-        <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
+        <a href="index.html" class="lien-icone"> <img src="images/clara_carpentier_logo.png" title="Accueil" alt="Logo Clara Carp" > </a>
         <div>
             <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="lien-icone">
                 <img src="images/mail_clara-removebg.png" title="Écrivez-moi" alt="Logo Mail Arty" >
