--- a/design_graphique.html
+++ b/design_graphique.html
@@ -17,10 +17,10 @@
         <nav>
             <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
             <div class="menu-categories">
-                <a href="mediation.html"> <img src="images/mediation-removebg.png" alt="bouton mediation" ></a>
-                <a href="design_graphique.html"> <img src="images/design_graphique_souligne.png" alt="bouton design graphique" ></a>
-                <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne-removebg.png" alt="bouton artiste plasticienne"></a>
-                <a href="a-propos.html"> <img src="images/about_clara-removebg.png" alt="bouton about" ></a>
+                 <a href="mediation.html"> <img src="images/mediation.png" alt="bouton mediation" ></a>
+                 <a href="design_graphique.html"> <img src="images/design_graphique.png" alt="bouton design graphique" ></a>
+                 <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne.png" alt="bouton artiste plasticienne"></a>
+                 <a href="a-propos.html"> <img src="images/about.png" alt="bouton about" ></a>
             </div>
         </nav>
     </header>
@@ -34,7 +34,7 @@
             </div>
         </section>
 
-        <h1>Jeu de piste : Cathédrale d'Amiens</h1>
+        <h1>Jeu de piste :<br> Cathédrale d'Amiens</h1>
         <section class="rangee_photos">
             <div>
                 <img src="images_design_graphique/jeu_de _piste_amiens.png" alt="photo du design jeu de piste pour la cathédral d'Amiens" >
@@ -56,7 +56,7 @@
     </main>
 
     <footer>
-        <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
+        <a href="index.html" class="lien-icone"> <img src="images/clara_carpentier_logo.png" title="Accueil" alt="Logo Clara Carp" > </a>
         <div>
             <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="lien-icone">
                 <img src="images/mail_clara-removebg.png" title="Écrivez-moi" alt="Logo Mail Arty" >
