--- a/mediation.html
+++ b/mediation.html
@@ -18,10 +18,10 @@
         <nav>
             <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
             <div class="menu-categories">
-                <a href="mediation.html"> <img src="images/mediation_souligne.png" alt="bouton mediation" ></a>
-                <a href="design_graphique.html"> <img src="images/design_graphique-removebg.png" alt="bouton design graphique" ></a>
-                <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne-removebg.png" alt="bouton artiste plasticienne"></a>
-                <a href="a-propos.html"> <img src="images/about_clara-removebg.png" alt="bouton about" ></a>
+                 <a href="mediation.html"> <img src="images/mediation.png" alt="bouton mediation" ></a>
+                    <a href="design_graphique.html"> <img src="images/design_graphique.png" alt="bouton design graphique" ></a>
+                    <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne.png" alt="bouton artiste plasticienne"></a>
+                    <a href="a-propos.html"> <img src="images/about.png" alt="bouton about" ></a>
             </div>
         </nav>
     </header>
@@ -84,7 +84,7 @@
 
         <h1>Création d'outils de médiation</h1>
 
-        <h2>Palais des Beaux Arts de Lille : Expo 1/2/3 Couleurs</h2>
+        <h2>Palais des Beaux Arts de Lille :<br> Expo 1/2/3 Couleurs</h2>
         
         <section class="rangee_photos">
             <div>
@@ -98,7 +98,7 @@
     </main>
 
     <footer>
-        <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
+        <a href="index.html" class="lien-icone"> <img src="images/clara_carpentier_logo.png" title="Accueil" alt="Logo Clara Carp" > </a>
         <div>
             <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="lien-icone">
                 <img src="images/mail_clara-removebg.png" title="Écrivez-moi" alt="Logo Mail Arty" >
