Description rapide des changements

--- a/a-propos.html
+++ b/a-propos.html
@@ -20,7 +20,7 @@
                  <a href="mediation.html"> <img src="images/mediation.png" alt="bouton mediation" ></a>
                  <a href="design_graphique.html"> <img src="images/design_graphique.png" alt="bouton design graphique" ></a>
                  <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne.png" alt="bouton artiste plasticienne"></a>
-                 <a href="a-propos.html"> <img src="images/about.png" alt="bouton about" ></a>
+                 <a href="a-propos.html"> <img src="images/about_clara_souligne.png" alt="bouton about" ></a>
             </div>
         </nav>
     </header>
