--- a/mediation.html
+++ b/mediation.html
@@ -18,10 +18,10 @@
         <nav>
             <a href="index.html" class="lien-icone"> <img src="images/claracarpentier-removebg.png" title="Accueil" alt="Logo Clara Carp" > </a>
             <div class="menu-categories">
-                 <a href="mediation.html"> <img src="images/mediation.png" alt="bouton mediation" ></a>
-                    <a href="design_graphique.html"> <img src="images/design_graphique.png" alt="bouton design graphique" ></a>
-                    <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne.png" alt="bouton artiste plasticienne"></a>
-                    <a href="a-propos.html"> <img src="images/about.png" alt="bouton about" ></a>
+                 <a href="mediation.html"> <img src="images/mediation_souligne.png" alt="bouton mediation" ></a>
+                 <a href="design_graphique.html"> <img src="images/design_graphique.png" alt="bouton design graphique" ></a>
+                 <a href="artiste_plasticienne.html"> <img src="images/artiste_plasticienne.png" alt="bouton artiste plasticienne"></a>
+                 <a href="a-propos.html"> <img src="images/about.png" alt="bouton about" ></a>
             </div>
         </nav>
     </header>
