--- a/mediation.html
+++ b/mediation.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <link rel="icon" href="images/faviconCC-removebg.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Clara Carpentier, artiste plasticienne spécialisée en art contemporain et architecture. Découvrez mes créations et projets artistiques.">
 </head>
 
 
