Description rapide des changements

--- a/a-propos.html
+++ b/a-propos.html
@@ -28,15 +28,9 @@
 
     
     <main>
-        <h1>À propos</h1>
-        <div class="carre-contenu">
-            <p>
-                Clara Carpentier est artiste pluridisciplinaire et médiatrice culturelle basée à Lille, diplômée d’un double Master en exposition et production des œuvres d’art contemporain (Université de Lille et École supérieure d’art du Nord-Pas-de-Calais, 2021). Elle articule sa pratique artistique — sculpture, vidéo, son, performance — avec l’animation d’ateliers et la transmission dans des institutions comme le Palais des Beaux-Arts de Lille et la Villa Cavrois à Croix. Son parcours allie conception et gestion de programmes éducatifs, collaborations culturelles et accompagnement de publics variés, en s’appuyant sur ses propres recherches et expériences de terrain.
-            </p>
-
-            <img src="images a-propos/portrait_about.png" alt="photo de clara carpentier" >
-        </div>
-        </br>
+        <section class="cv">
+            <img src="images a-propos/CV_artistique_Clara_2025.jpg">
+        </section>
         <div class=mail-contact>
             <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="cta">UN PROJET ? ÉCRIVEZ-MOI</a>
         </div>
@@ -45,6 +39,7 @@
 
     <footer>
         <a href="index.html" class="lien-icone"> <img src="images/clara_carpentier_logo.png" title="Accueil" alt="Logo Clara Carp" > </a>
+        <p>&copy;  Tous droits réservés</p>
         <div>
             <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="lien-icone">
                 <img src="images/mail_clara-removebg.png" title="Écrivez-moi" alt="Logo Mail Arty" >
