--- a/index.html
+++ b/index.html
@@ -29,21 +29,30 @@
         <main>
             <section class="accueil-introduction">
                 <img src="images/portrait_dessin-removebg.png" alt="Portrait dessin de Clara" >
+                <h1>À propos</h1>
+                <br>
+                <div class="carre-contenu">
+                <p>
+                    Clara Carpentier est artiste pluridisciplinaire et médiatrice culturelle basée à Lille, diplômée d’un double Master en exposition et production des œuvres d’art contemporain (Université de Lille et École supérieure d’art du Nord-Pas-de-Calais, 2021). Elle articule sa pratique artistique — sculpture, vidéo, son, performance — avec l’animation d’ateliers et la transmission dans des institutions comme le Palais des Beaux-Arts de Lille et la Villa Cavrois à Croix. Son parcours allie conception et gestion de programmes éducatifs, collaborations culturelles et accompagnement de publics variés, en s’appuyant sur ses propres recherches et expériences de terrain.
+                </p>
+                </div>
+                </br>
             </section>
 
             <section class="accueil-photos">
-                <h2>Mes derniers projets</h2>
+                <h1>Mes derniers projets</h1>
                 <div>
-                    <a href="mediation.html"> <img src="images/visite_pba.png" title="Médiation" alt="C'est une photo de Clara qui présente un tableau" > </a>
-                    <a href="design_graphique.html"> <img src="images/logo_amiens.png" title="Design Graphique" alt="Quelqu'un tient une affiche avec des logos pour la cathédrale d'Amiens'" > </a>
-                    <a href="artiste_plasticienne.html"> <img src="images/perroquet_casque.png" title="Artiste Plasticienne" alt="Sculpture en acier créée par Clara" > </a>
-                    <a href="a-propos.html"> <img src="images/atelier_enfants.png" title="A Propos" alt="Atelier avec des enfants à la villa Cavrois" > </a>
+                    <a href="mediation.html"> <img src="images/visite_pba.png" title="Médiation Clara Carpentier" alt="C'est une photo de Clara qui présente un tableau" > </a>
+                    <a href="design_graphique.html"> <img src="images/logo_amiens.png" title="Design Graphique Clara Carpentier" alt="Quelqu'un tient une affiche avec des logos pour la cathédrale d'Amiens'" > </a>
+                    <a href="artiste_plasticienne.html"> <img src="images/perroquet_casque.png" title="Artiste Plasticienne Clara Carpentier" alt="Sculpture en acier créée par Clara" > </a>
+                    <a href="a-propos.html"> <img src="images/atelier_enfants.png" title="A Propos Clara Carpentier" alt="Atelier avec des enfants à la villa Cavrois" > </a>
                 </div>
 
             </section>
         </main>
         <footer>
             <img src="images/clara_carpentier_logo.png" alt="Logo Clara Carp" >
+            <p>&copy;  Tous droits réservés</p>
             <div>
                 <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="lien-icone">
                     <img src="images/mail_clara-removebg.png" title="Écrivez-moi" alt="Logo Mail Arty" >
