Description rapide des changements

--- a/index.html
+++ b/index.html
@@ -37,21 +37,41 @@
                 </p>
                 </div>
                 </br>
+
+                <h1 class="titre-centre">Mes derniers projets</h1>
             </section>
 
-            <section class="accueil-photos">
-                <h1>Mes derniers projets</h1>
-                <div>
-                    <a href="mediation.html"> <img src="images/visite_pba.png" title="Médiation Clara Carpentier" alt="C'est une photo de Clara qui présente un tableau" > </a>
-                    <a href="design_graphique.html"> <img src="images/logo_amiens.png" title="Design Graphique Clara Carpentier" alt="Quelqu'un tient une affiche avec des logos pour la cathédrale d'Amiens'" > </a>
-                    <a href="artiste_plasticienne.html"> <img src="images/perroquet_casque.png" title="Artiste Plasticienne Clara Carpentier" alt="Sculpture en acier créée par Clara" > </a>
-                    <a href="a-propos.html"> <img src="images/atelier_enfants.png" title="A Propos Clara Carpentier" alt="Atelier avec des enfants à la villa Cavrois" > </a>
+            
+
+            <section class="projets-grid">
+
+                <article class="projet-card" data-link="mediation.html">
+                    <img src="images/visite_pba.png" title="Médiation Clara Carpentier" alt="C'est une photo de Clara qui présente un tableau" > </a>
+                    <h2>Médiation</h2>
+                </article>
+
+                <article class="projet-card" data-link="design_graphique.html">
+                    <img src="images/logo_amiens.png" title="Design Graphique Clara Carpentier" alt="Quelqu'un tient une affiche avec des logos pour la cathédrale d'Amiens'" > </a>
+                    <h2>Design Graphique</h2>
+                </article>
+
+                <article class="projet-card" data-link="artiste_plasticienne.html">
+                    <img src="images/perroquet_casque_preview.png" title="Artiste Plasticienne Clara Carpentier" alt="Sculpture en acier créée par Clara" > </a>
+                    <h2>Artiste Plasticienne</h2>
+                </article>
+                    <!--<a href="a-propos.html"> <img src="images/atelier_enfants.png" title="A Propos Clara Carpentier" alt="Atelier avec des enfants à la villa Cavrois" > </a>-->
+            </section>
+
+                <div id="lightbox" class="lightbox">
+                    <button class="lightbox-close">&times;</button>
+                    <button class="lightbox-prev">&#10094;</button>
+                    <button class="lightbox-next">&#10095;</button>
+                    <img class="lightbox-image" src="" alt="">
+                    <div class="lightbox-counter">1/3</div>
                 </div>
-
-            </section>
         </main>
+        
         <footer>
-            <img src="images/clara_carpentier_logo.png" alt="Logo Clara Carp" >
             <p>&copy;  Tous droits réservés</p>
             <div>
                 <a target="_blank" href="mailto:claracarpentierr@gmail.com" class="lien-icone">
